clang/test/CIR/IR/invalid-eh-type-id.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

!u32i = !cir.int<u, 32>
!u8i = !cir.int<u, 8>
!void = !cir.void

module {

cir.func private @exception_handling_type_id() {
  // expected-error@+1 {{'cir.eh.typeid' op '_ZTIi' does not reference a valid cir.global}}
  %type_id = cir.eh.typeid @_ZTIi
  cir.return
}

}

